Fix OverFlow

--- a/sass/global/_global.scss
+++ b/sass/global/_global.scss
@@ -12,7 +12,6 @@ html,
 body {
   position: relative;
   height: 100%;
-  overflow-x: hidden;
 }
 
 body {
@@ -27,7 +26,6 @@ body {
 body {
   @include font-size(20px);
   font-family: 'IBM', sans-serif;
-  height: 2000px;
 }
 
 h1,
